impleemented preprocessing to jupyter notebook

--- a/preprocessed-data.ipynb
+++ b/preprocessed-data.ipynb
@@ -2,20 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "305b0a04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Downloads\\Python\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import scipy\n",
-    "import numpy as np\n",
-    "import re"
+    "from preprocess import process_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "20eb23e6",
    "metadata": {},
    "outputs": [
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "04ac2df1",
    "metadata": {},
    "outputs": [
@@ -47,17 +55,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                              review\n",
-      "0  at first gumagana cya..pero pagnalowbat cya nd...\n",
-      "1  grabi pangalawa ko ng order sa shapee pero pur...\n",
-      "2  2l gray/black order ko. bakit 850ml lang po pi...\n",
-      "3  walang silbing product.. bwesit. di gumagana d...\n",
-      "4  d po maganda naman po yung neck fan, pero po n...\n"
+      "                                              review  \\\n",
+      "0  at first gumagana cya..pero pagnalowbat cya nd...   \n",
+      "1  grabi pangalawa ko ng order sa shapee pero pur...   \n",
+      "2  2l gray/black order ko. bakit 850ml lang po pi...   \n",
+      "3  walang silbing product.. bwesit. di gumagana d...   \n",
+      "4  d po maganda naman po yung neck fan, pero po n...   \n",
+      "\n",
+      "                                              tokens  \n",
+      "0  [▁at, ▁first, ▁guma, gana, ▁c, ya, pero, ▁pag,...  \n",
+      "1  [▁grab, i, ▁panga, la, wa, ▁ko, ▁ng, ▁order, ▁...  \n",
+      "2  [▁2, l, ▁gra, y, /, black, ▁order, ▁ko, ., ▁ba...  \n",
+      "3  [▁walang, ▁sil, bing, ▁product, ▁bw, es, it, ....  \n",
+      "4  [▁d, ▁po, ▁maganda, ▁naman, ▁po, ▁yung, ▁ne, c...  \n"
      ]
     }
    ],
    "source": [
     "reviews_df = df.drop(columns=['sentiment'])\n",
+    "reviews_df['tokens'] = reviews_df['review'].apply(process_data)\n",
+    "\n",
     "print(reviews_df.head())"
    ]
   }
