Updated tagalog stopwords on LDA.ipynb

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -119,14 +119,18 @@
     "english_stopwords = stopwords.words('english')\n",
     "\n",
     "# Basic Tagalog/Filipino stopwords (expand this list if needed)\n",
-    "tagalog_stopwords = [\n",
+    "tagalog_stopwords = {\n",
     "    'ako', 'ikaw', 'siya', 'tayo', 'kami', 'kayo', 'sila',\n",
     "    'ang', 'ng', 'sa', 'para', 'ay', 'na', 'nang', 'at', 'pero', 'kung', 'kasi', 'dahil',\n",
     "    'hindi', 'oo', 'huwag', 'wala', 'meron', 'may', 'niya', 'rin', 'din', 'ito', 'iyan',\n",
-    "    'iyon', 'doon', 'dito', 'kaya', 'lamang', 'lang', 'mga'\n",
-    "]\n",
+    "    'iyon', 'doon', 'dito', 'kaya', 'lamang', 'lang', 'lng', 'mga',\n",
+    "    'ko', 'pa', 'po', 'sya', 'xa', 'yung', 'ung', 'un', 'naman', 'nmn', 'nman',\n",
+    "    'kaso', 'ok', 'okay', 'ganda', 'di', 'nyo', 'nila', 'muna',\n",
+    "    'sana', 'bago', 'nga', 'kc', 'tnx', 'salamat', 'mag', 'nag',\n",
+    "    'sna', 'nasa', 'mo', 'nya', 'isa'\n",
+    "}\n",
     "\n",
-    "combined_stopwords = set(english_stopwords + tagalog_stopwords)"
+    "combined_stopwords = set(english_stopwords).union(tagalog_stopwords)"
    ]
   },
   {
@@ -200,42 +204,45 @@
       "\n",
       "Topics found by LDA:\n",
       "[(0,\n",
-      "  '0.100*\"size\" + 0.050*\"maliit\" + 0.024*\"kasya\" + 0.022*\"amoy\" + 0.021*\"paa\" '\n",
-      "  '+ 0.020*\"ko\" + 0.017*\"sakto\" + 0.012*\"add\" + 0.010*\"maraming\" + '\n",
-      "  '0.008*\"sya\"'),\n",
+      "  '0.044*\"maganda\" + 0.034*\"dumating\" + 0.032*\"order\" + 0.029*\"size\" + '\n",
+      "  '0.024*\"seller\" + 0.021*\"quality\" + 0.016*\"good\" + 0.014*\"color\" + '\n",
+      "  '0.014*\"maliit\" + 0.013*\"thank\"'),\n",
       " (1,\n",
-      "  '0.064*\"yung\" + 0.052*\"naman\" + 0.036*\"ko\" + 0.029*\"kaso\" + 0.029*\"sya\" + '\n",
-      "  '0.022*\"maganda\" + 0.019*\"di\" + 0.019*\"okay\" + 0.014*\"pa\" + 0.014*\"ok\"'),\n",
+      "  '0.073*\"seller\" + 0.062*\"thank\" + 0.027*\"order\" + 0.025*\"good\" + '\n",
+      "  '0.022*\"item\" + 0.017*\"thanks\" + 0.016*\"rider\" + 0.015*\"shopee\" + '\n",
+      "  '0.014*\"ulit\" + 0.014*\"quality\"'),\n",
       " (2,\n",
-      "  '0.039*\"ko\" + 0.027*\"pa\" + 0.018*\"nag\" + 0.015*\"di\" + 0.014*\"mag\" + '\n",
-      "  '0.011*\"kulang\" + 0.010*\"nila\" + 0.010*\"sayang\" + 0.010*\"item\" + '\n",
-      "  '0.009*\"pera\"'),\n",
+      "  '0.024*\"makapal\" + 0.018*\"sobrang\" + 0.015*\"overall\" + 0.015*\"condition\" + '\n",
+      "  '0.014*\"talaga\" + 0.010*\"excellent\" + 0.009*\"smooth\" + 0.009*\"quality\" + '\n",
+      "  '0.009*\"masikip\" + 0.009*\"ka\"'),\n",
       " (3,\n",
-      "  '0.139*\"ung\" + 0.078*\"lng\" + 0.042*\"nmn\" + 0.038*\"ok\" + 0.038*\"nman\" + '\n",
-      "  '0.017*\"un\" + 0.016*\"kc\" + 0.015*\"ko\" + 0.013*\"xa\" + 0.012*\"kaso\"'),\n",
+      "  '0.022*\"order\" + 0.016*\"kulang\" + 0.015*\"item\" + 0.013*\"tapos\" + 0.011*\"iba\" '\n",
+      "  '+ 0.011*\"sira\" + 0.010*\"isang\" + 0.009*\"wag\" + 0.009*\"sayang\" + '\n",
+      "  '0.009*\"pinadala\"'),\n",
       " (4,\n",
-      "  '0.021*\"meters\" + 0.021*\"shipped\" + 0.020*\"happy\" + 0.015*\"masikip\" + '\n",
-      "  '0.014*\"immediately\" + 0.014*\"correct\" + 0.013*\"perfect\" + 0.009*\"today\" + '\n",
-      "  '0.009*\"hotel\" + 0.008*\"job\"'),\n",
+      "  '0.020*\"pag\" + 0.014*\"pwede\" + 0.014*\"maganda\" + 0.011*\"gamitin\" + '\n",
+      "  '0.011*\"gumagana\" + 0.010*\"price\" + 0.010*\"nung\" + 0.010*\"parang\" + '\n",
+      "  '0.009*\"pang\" + 0.009*\"talaga\"'),\n",
       " (5,\n",
-      "  '0.039*\"wrap\" + 0.034*\"bubble\" + 0.025*\"food\" + 0.014*\"naka\" + 0.014*\"box\" + '\n",
-      "  '0.013*\"mouse\" + 0.011*\"remote\" + 0.011*\"mystery\" + 0.010*\"pad\" + '\n",
-      "  '0.009*\"packaging\"'),\n",
+      "  '0.026*\"amoy\" + 0.013*\"love\" + 0.012*\"packaged\" + 0.012*\"good\" + '\n",
+      "  '0.011*\"parang\" + 0.011*\"like\" + 0.009*\"mabango\" + 0.007*\"medyo\" + '\n",
+      "  '0.007*\"well\" + 0.007*\"pag\"'),\n",
       " (6,\n",
-      "  '0.034*\"nyo\" + 0.029*\"check\" + 0.021*\"bago\" + 0.014*\"muna\" + 0.013*\"next\" + '\n",
-      "  '0.012*\"sana\" + 0.011*\"time\" + 0.010*\"always\" + 0.009*\"double\" + '\n",
-      "  '0.008*\"kapal\"'),\n",
+      "  '0.021*\"blue\" + 0.014*\"godbless\" + 0.014*\"color\" + 0.011*\"dumating\" + '\n",
+      "  '0.011*\"item\" + 0.011*\"black\" + 0.010*\"soon\" + 0.009*\"seller\" + 0.009*\"best\" '\n",
+      "  '+ 0.008*\"order\"'),\n",
       " (7,\n",
-      "  '0.073*\"po\" + 0.072*\"seller\" + 0.059*\"thank\" + 0.038*\"order\" + 0.033*\"ganda\" '\n",
-      "  '+ 0.027*\"ko\" + 0.022*\"good\" + 0.021*\"salamat\" + 0.020*\"maganda\" + '\n",
-      "  '0.019*\"quality\"'),\n",
+      "  '0.038*\"sulit\" + 0.018*\"service\" + 0.013*\"hangin\" + 0.012*\"fan\" + '\n",
+      "  '0.011*\"price\" + 0.011*\"malakas\" + 0.010*\"recommended\" + 0.010*\"product\" + '\n",
+      "  '0.010*\"worth\" + 0.010*\"mouse\"'),\n",
       " (8,\n",
-      "  '0.052*\"ko\" + 0.043*\"order\" + 0.043*\"color\" + 0.038*\"dumating\" + '\n",
-      "  '0.034*\"yung\" + 0.031*\"kulay\" + 0.027*\"black\" + 0.021*\"mali\" + 0.021*\"kaso\" '\n",
-      "  '+ 0.020*\"yong\"'),\n",
+      "  '0.021*\"surely\" + 0.016*\"perfect\" + 0.015*\"think\" + 0.012*\"school\" + '\n",
+      "  '0.010*\"phone\" + 0.009*\"cm\" + 0.008*\"back\" + 0.007*\"connect\" + 0.007*\"tska\" '\n",
+      "  '+ 0.007*\"day\"'),\n",
       " (9,\n",
-      "  '0.065*\"love\" + 0.033*\"malambot\" + 0.032*\"see\" + 0.029*\"get\" + 0.020*\"tnx\" + '\n",
-      "  '0.012*\"wall\" + 0.009*\"duper\" + 0.009*\"already\" + 0.008*\"one\" + 0.007*\"buy\"')]\n"
+      "  '0.027*\"super\" + 0.021*\"affordable\" + 0.019*\"legit\" + 0.018*\"uulitin\" + '\n",
+      "  '0.018*\"thankyou\" + 0.017*\"food\" + 0.017*\"bilis\" + 0.016*\"maganda\" + '\n",
+      "  '0.015*\"matagal\" + 0.015*\"nagdeliver\"')]\n"
      ]
     }
    ],
@@ -256,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Coherence Score: 0.47906013215457754\n"
+      "Coherence Score: 0.38468656343648344\n"
      ]
     }
    ],
