replace tagalog stopword list with tagalog stopword list txt file

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -110,7 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "001e98d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load tagalog stopwords function\n",
+    "def load_stopwords(filepath):\n",
+    "    with open(filepath, 'r', encoding='utf-8') as file:\n",
+    "        return set(line.strip() for line in file if line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "01e67728",
    "metadata": {},
    "outputs": [],
@@ -119,16 +132,17 @@
     "english_stopwords = stopwords.words('english')\n",
     "\n",
     "# Basic Tagalog/Filipino stopwords (expand this list if needed)\n",
-    "tagalog_stopwords = {\n",
-    "    'ako', 'ikaw', 'siya', 'tayo', 'kami', 'kayo', 'sila',\n",
-    "    'ang', 'ng', 'sa', 'para', 'ay', 'na', 'nang', 'at', 'pero', 'kung', 'kasi', 'dahil',\n",
-    "    'hindi', 'oo', 'huwag', 'wala', 'meron', 'may', 'niya', 'rin', 'din', 'ito', 'iyan',\n",
-    "    'iyon', 'doon', 'dito', 'kaya', 'lamang', 'lang', 'lng', 'mga',\n",
-    "    'ko', 'pa', 'po', 'sya', 'xa', 'yung', 'ung', 'un', 'naman', 'nmn', 'nman',\n",
-    "    'kaso', 'ok', 'okay', 'ganda', 'di', 'nyo', 'nila', 'muna',\n",
-    "    'sana', 'bago', 'nga', 'kc', 'tnx', 'salamat', 'mag', 'nag',\n",
-    "    'sna', 'nasa', 'mo', 'nya', 'isa'\n",
-    "}\n",
+    "# tagalog_stopwords = {\n",
+    "#     'ako', 'ikaw', 'siya', 'tayo', 'kami', 'kayo', 'sila',\n",
+    "#     'ang', 'ng', 'sa', 'para', 'ay', 'na', 'nang', 'at', 'pero', 'kung', 'kasi', 'dahil',\n",
+    "#     'hindi', 'oo', 'huwag', 'wala', 'meron', 'may', 'niya', 'rin', 'din', 'ito', 'iyan',\n",
+    "#     'iyon', 'doon', 'dito', 'kaya', 'lamang', 'lang', 'lng', 'mga',\n",
+    "#     'ko', 'pa', 'po', 'sya', 'xa', 'yung', 'ung', 'un', 'naman', 'nmn', 'nman',\n",
+    "#     'kaso', 'ok', 'okay', 'ganda', 'di', 'nyo', 'nila', 'muna',\n",
+    "#     'sana', 'bago', 'nga', 'kc', 'tnx', 'salamat', 'mag', 'nag',\n",
+    "#     'sna', 'nasa', 'mo', 'nya', 'isa'\n",
+    "# }\n",
+    "tagalog_stopwords = load_stopwords(\"stopwords-tl.txt\")\n",
     "\n",
     "combined_stopwords = set(english_stopwords).union(tagalog_stopwords)"
    ]
