added more tagalog stopwords

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 144,
    "id": "305b0a04",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 145,
    "id": "b44f0e77",
    "metadata": {},
    "outputs": [
@@ -26,8 +26,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\vldth\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to C:\\Users\\Fatima\n",
+      "[nltk_data]     Dy\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
@@ -37,7 +37,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 146,
    "id": "20eb23e6",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 147,
    "id": "04ac2df1",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 148,
    "id": "4ec261ac",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "001e98d7",
    "metadata": {},
    "outputs": [],
@@ -131,17 +131,7 @@
     "# Define stopwords\n",
     "english_stopwords = stopwords.words('english')\n",
     "\n",
-    "# Basic Tagalog/Filipino stopwords (expand this list if needed)\n",
-    "# tagalog_stopwords = {\n",
-    "#     'ako', 'ikaw', 'siya', 'tayo', 'kami', 'kayo', 'sila',\n",
-    "#     'ang', 'ng', 'sa', 'para', 'ay', 'na', 'nang', 'at', 'pero', 'kung', 'kasi', 'dahil',\n",
-    "#     'hindi', 'oo', 'huwag', 'wala', 'meron', 'may', 'niya', 'rin', 'din', 'ito', 'iyan',\n",
-    "#     'iyon', 'doon', 'dito', 'kaya', 'lamang', 'lang', 'lng', 'mga',\n",
-    "#     'ko', 'pa', 'po', 'sya', 'xa', 'yung', 'ung', 'un', 'naman', 'nmn', 'nman',\n",
-    "#     'kaso', 'ok', 'okay', 'ganda', 'di', 'nyo', 'nila', 'muna',\n",
-    "#     'sana', 'bago', 'nga', 'kc', 'tnx', 'salamat', 'mag', 'nag',\n",
-    "#     'sna', 'nasa', 'mo', 'nya', 'isa'\n",
-    "# }\n",
+    "# Tagalog/Filipino stopwords \n",
     "tagalog_stopwords = load_stopwords(\"stopwords-tl.txt\")\n",
     "\n",
     "combined_stopwords = set(english_stopwords).union(tagalog_stopwords)"
@@ -149,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 151,
    "id": "215e29fa",
    "metadata": {},
    "outputs": [],
@@ -164,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 152,
    "id": "b3c0885c",
    "metadata": {},
    "outputs": [],
@@ -175,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 153,
    "id": "0bfd68f1",
    "metadata": {},
    "outputs": [],
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 154,
    "id": "a38676bf",
    "metadata": {},
    "outputs": [],
@@ -207,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 155,
    "id": "195f2b20",
    "metadata": {},
    "outputs": [
@@ -218,45 +208,44 @@
       "\n",
       "Topics found by LDA:\n",
       "[(0,\n",
-      "  '0.044*\"maganda\" + 0.034*\"dumating\" + 0.032*\"order\" + 0.029*\"size\" + '\n",
-      "  '0.024*\"seller\" + 0.021*\"quality\" + 0.016*\"good\" + 0.014*\"color\" + '\n",
-      "  '0.014*\"maliit\" + 0.013*\"thank\"'),\n",
+      "  '0.036*\"godbless\" + 0.030*\"overall\" + 0.021*\"arrived\" + 0.016*\"mystery\" + '\n",
+      "  '0.016*\"immediately\" + 0.013*\"mejo\" + 0.013*\"pouch\" + 0.012*\"mouse\" + '\n",
+      "  '0.011*\"better\" + 0.009*\"ty\"'),\n",
       " (1,\n",
-      "  '0.073*\"seller\" + 0.062*\"thank\" + 0.027*\"order\" + 0.025*\"good\" + '\n",
-      "  '0.022*\"item\" + 0.017*\"thanks\" + 0.016*\"rider\" + 0.015*\"shopee\" + '\n",
-      "  '0.014*\"ulit\" + 0.014*\"quality\"'),\n",
+      "  '0.054*\"size\" + 0.044*\"order\" + 0.031*\"yung\" + 0.029*\"kaso\" + 0.029*\"color\" '\n",
+      "  '+ 0.029*\"dumating\" + 0.021*\"maliit\" + 0.020*\"black\" + 0.017*\"kulay\" + '\n",
+      "  '0.016*\"mali\"'),\n",
       " (2,\n",
-      "  '0.024*\"makapal\" + 0.018*\"sobrang\" + 0.015*\"overall\" + 0.015*\"condition\" + '\n",
-      "  '0.014*\"talaga\" + 0.010*\"excellent\" + 0.009*\"smooth\" + 0.009*\"quality\" + '\n",
-      "  '0.009*\"masikip\" + 0.009*\"ka\"'),\n",
+      "  '0.018*\"pink\" + 0.018*\"kulay\" + 0.017*\"dumating\" + 0.016*\"order\" + '\n",
+      "  '0.014*\"kaso\" + 0.013*\"color\" + 0.013*\"blue\" + 0.010*\"inorder\" + 0.009*\"nag\" '\n",
+      "  '+ 0.009*\"mag\"'),\n",
       " (3,\n",
-      "  '0.022*\"order\" + 0.016*\"kulang\" + 0.015*\"item\" + 0.013*\"tapos\" + 0.011*\"iba\" '\n",
-      "  '+ 0.011*\"sira\" + 0.010*\"isang\" + 0.009*\"wag\" + 0.009*\"sayang\" + '\n",
-      "  '0.009*\"pinadala\"'),\n",
+      "  '0.086*\"yung\" + 0.030*\"kaso\" + 0.020*\"item\" + 0.017*\"kasi\" + 0.014*\"maganda\" '\n",
+      "  '+ 0.013*\"wala\" + 0.012*\"pag\" + 0.010*\"nung\" + 0.010*\"nya\" + 0.009*\"parang\"'),\n",
       " (4,\n",
-      "  '0.020*\"pag\" + 0.014*\"pwede\" + 0.014*\"maganda\" + 0.011*\"gamitin\" + '\n",
-      "  '0.011*\"gumagana\" + 0.010*\"price\" + 0.010*\"nung\" + 0.010*\"parang\" + '\n",
-      "  '0.009*\"pang\" + 0.009*\"talaga\"'),\n",
+      "  '0.061*\"thank\" + 0.050*\"maganda\" + 0.048*\"seller\" + 0.046*\"good\" + '\n",
+      "  '0.036*\"quality\" + 0.030*\"price\" + 0.021*\"nice\" + 0.018*\"tela\" + '\n",
+      "  '0.016*\"medyo\" + 0.015*\"nya\"'),\n",
       " (5,\n",
-      "  '0.026*\"amoy\" + 0.013*\"love\" + 0.012*\"packaged\" + 0.012*\"good\" + '\n",
-      "  '0.011*\"parang\" + 0.011*\"like\" + 0.009*\"mabango\" + 0.007*\"medyo\" + '\n",
-      "  '0.007*\"well\" + 0.007*\"pag\"'),\n",
+      "  '0.028*\"uulitin\" + 0.013*\"staff\" + 0.013*\"tumagal\" + 0.009*\"jogging\" + '\n",
+      "  '0.009*\"kapal\" + 0.009*\"service\" + 0.008*\"hotel\" + 0.008*\"lakas\" + '\n",
+      "  '0.007*\"compared\" + 0.006*\"week\"'),\n",
       " (6,\n",
-      "  '0.021*\"blue\" + 0.014*\"godbless\" + 0.014*\"color\" + 0.011*\"dumating\" + '\n",
-      "  '0.011*\"item\" + 0.011*\"black\" + 0.010*\"soon\" + 0.009*\"seller\" + 0.009*\"best\" '\n",
-      "  '+ 0.008*\"order\"'),\n",
+      "  '0.059*\"order\" + 0.051*\"seller\" + 0.034*\"thank\" + 0.030*\"shop\" + '\n",
+      "  '0.028*\"time\" + 0.026*\"complete\" + 0.023*\"items\" + 0.019*\"dumating\" + '\n",
+      "  '0.018*\"good\" + 0.018*\"sulit\"'),\n",
       " (7,\n",
-      "  '0.038*\"sulit\" + 0.018*\"service\" + 0.013*\"hangin\" + 0.012*\"fan\" + '\n",
-      "  '0.011*\"price\" + 0.011*\"malakas\" + 0.010*\"recommended\" + 0.010*\"product\" + '\n",
-      "  '0.010*\"worth\" + 0.010*\"mouse\"'),\n",
+      "  '0.101*\"ganda\" + 0.082*\"super\" + 0.030*\"sobrang\" + 0.025*\"quality\" + '\n",
+      "  '0.025*\"talaga\" + 0.018*\"affordable\" + 0.017*\"thank\" + 0.017*\"worth\" + '\n",
+      "  '0.011*\"price\" + 0.011*\"mura\"'),\n",
       " (8,\n",
-      "  '0.021*\"surely\" + 0.016*\"perfect\" + 0.015*\"think\" + 0.012*\"school\" + '\n",
-      "  '0.010*\"phone\" + 0.009*\"cm\" + 0.008*\"back\" + 0.007*\"connect\" + 0.007*\"tska\" '\n",
-      "  '+ 0.007*\"day\"'),\n",
+      "  '0.038*\"love\" + 0.034*\"amoy\" + 0.014*\"related\" + 0.012*\"long\" + '\n",
+      "  '0.011*\"mainit\" + 0.011*\"mabango\" + 0.011*\"surely\" + 0.010*\"bet\" + '\n",
+      "  '0.009*\"video\" + 0.009*\"like\"'),\n",
       " (9,\n",
-      "  '0.027*\"super\" + 0.021*\"affordable\" + 0.019*\"legit\" + 0.018*\"uulitin\" + '\n",
-      "  '0.018*\"thankyou\" + 0.017*\"food\" + 0.017*\"bilis\" + 0.016*\"maganda\" + '\n",
-      "  '0.015*\"matagal\" + 0.015*\"nagdeliver\"')]\n"
+      "  '0.180*\"po\" + 0.044*\"seller\" + 0.034*\"order\" + 0.034*\"thank\" + 0.024*\"ganda\" '\n",
+      "  '+ 0.022*\"ulit\" + 0.018*\"maganda\" + 0.015*\"thankyou\" + 0.014*\"thanks\" + '\n",
+      "  '0.013*\"rider\"')]\n"
      ]
     }
    ],
@@ -268,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 156,
    "id": "062303dc",
    "metadata": {},
    "outputs": [
@@ -277,7 +266,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Coherence Score: 0.38468656343648344\n"
+      "Coherence Score: 0.4606332724074339\n"
      ]
     }
    ],
@@ -296,7 +285,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
